more website changes

--- a/Website/how_it_works.html
+++ b/Website/how_it_works.html
@@ -52,67 +52,67 @@
                             <section class="tiles">
                                 <article class="style1">
                                     <span class="image">
-                                        <img src="images/Compactor/Compactor_1.jpg" alt="" />
+                                        <img src="images/Prototype/prototype_4.jpg" alt="" />
                                     </span>
                                     <a href="mechanical.html">
-                                        <h2 style="font-size:250%;">Mechanical </h2>
+                                        <h2 style="font-size:250%;color:#B8D3F1;font-weight:500;">Mechanical </h2>
                                         <div class="content">
-                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                            <p style="font-size:150%;font-weight:500;">How Frost was built</p>
                                         </div>
                                     </a>
                                 </article>
                                 <article class="style2">
                                     <span class="image">
-                                        <img src="images/Lidar/Lidar_1.jpg" alt="" />
+                                        <img src="images/Lidar/Lidar_4.jpg" alt="" />
                                     </span>
                                     <a href="electrical.html">
-                                        <h2 style="font-size:250%;">Electrical</h2>
+                                        <h2 style="font-size:250%;color:#B8D3F1;font-weight:500;">Electrical</h2>
                                         <div class="content">
-                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                            <p style="font-size:150%;font-weight:500;">The circuits used to make Frost</p>
                                         </div>
                                     </a>
                                 </article>
                                 <article class="style3">
                                     <span class="image">
-                                        <img src="images/Compactor/Compactor_2.jpg" alt="" />
+                                        <img src="images/Software/software_3(scaled).png" alt="" />
                                     </span>
                                     <a href="software.html">
-                                        <h2 style="font-size:250%;">Software</h2>
+                                        <h2 style="font-size:250%;color:#B8D3F1;font-weight:500;">Software</h2>
                                         <div class="content">
-                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                            <p style="font-size:150%;font-weight:500;">How python was used to make Frost smart</p>
                                         </div>
                                     </a>
                                 </article>
                                 <article class="style4">
                                     <span class="image">
-                                        <img src="images/Compactor/Compactor_3.jpg" alt="" />
+                                        <img src="images/Software/kinect.jpg" alt="" />
                                     </span>
                                     <a href="firmware.html">
-                                        <h2 style="font-size:250%;">Firmware</h2>
+                                        <h2 style="font-size:250%;color:#073457;font-weight:500;">Firmware</h2>
                                         <div class="content">
-                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                            <p style="font-size:150%;font-weight:500;">How Arduinos were used to make Frost move</p>
                                         </div>
                                     </a>
                                 </article>
                                 <article class="style5">
                                     <span class="image">
-                                        <img src="images/Lidar/Lidar_2.jpg" alt="" />
+                                        <img src="images/Prototype/MiniLauncher.png" alt="" />
                                     </span>
                                     <a href="prototype.html">
-                                        <h2 style="font-size:250%;">Prototype</h2>
+                                        <h2 style="font-size:250%;color:#073457;font-weight:500;">Prototype</h2>
                                         <div class="content">
-                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                            <p style="font-size:150%;font-weight:500;">Our beautiful Prototype that lasted for 6 weeks</p>
                                         </div>
                                     </a>
                                 </article>
                                 <article class="style6">
                                     <span class="image">
-                                        <img src="images/Lidar/Lidar_3.jpg" alt="" />
+                                        <img src="images/Lidar/Lidar_1.jpg" alt="" />
                                     </span>
                                     <a href="sensors.html">
-                                        <h2 style="font-size:250%;">Sensors</h2>
+                                        <h2 style="font-size:250%;color:#073457;font-weight:500;">Sensors</h2>
                                         <div class="content">
-                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                            <p style="font-size:150%;font-weight:500;">All the sensors used in Frost</p>
                                         </div>
                                     </a>
                                 </article>
