--- a/Website/budget.html
+++ b/Website/budget.html
@@ -59,16 +59,264 @@
                                             <table>
                                                 <thead>
                                                     <tr>
-                                                        <th>Name</th>
                                                         <th>Description</th>
-                                                        <th>Price</th>
+                                                        <th>Vendor</th>
+                                                        <th>Quantity</th>
+                                                        <th>Total Price</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td>Something</td>
-                                                        <td>Ante turpis integer aliquet porttitor.</td>
+                                                        <td>Aluminum 6063 U Channel Extrusion (2"x1"x36")</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Aluminum 6063 U Channel Extrusion (.75"x.75"x24")</td>
+                                                        <td>N/A</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Aluminum 6063 Square Extrusion (1"x1"x72")</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                        
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Aluminum 6061 L Extrusion (1"x1"x36")</td>
+                                                        <td>McMaster</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Aluminum 6061 Rectangular Stock (3"x1"x8")</td>
+                                                        <td>N/A</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Aluminum 6061 Plate (.25"x6"x6")</td>
+                                                        <td>N/A</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Aluminum 6061 Round Stock (2"x3")</td>
+                                                        <td>N/A</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>80/20 Extrusion</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>3</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Mild Steel Sheet (.0625"x12"x24")</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>3/8" Medium Carbon Steel Shaft (12")</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>1/4" Medium Carbon Steel Shaft (6")</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+<tr>
+                                                        <td>1/8" Delrin Sheet (6"x6")</td>
+                                                        <td>N/A</td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>PETG Sheet (.125"x12"x24")</td>
+                                                        <td>McMaster</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Plywood (.125"x12"x12")</td>
+                                                        <td>N/A</td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Plywood (.25"x12"x12")</td>
+                                                        <td>N/A</td>
+                                                        <td></td>
+                                                        <td></td>                                                        
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Plywood (.5"x24"48")</td>
+                                                        <td>N/A</td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>2x4 Lumber (48")</td>
+                                                        <td>N/A</td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>3/8" Shaft Collar</td>
+                                                        <td>McMaster</td>
+                                                        <td>4</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>12" Lazy Susan Bearing</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>3" Lazy Susan Bearing</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>PLA Filament (various colors)</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>1</td>
+                                                        <td>15.00</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>3/8" Bushing Bearing</td>
+                                                        <td>McMaster</td>
+                                                        <td>4</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>1/4" Bearing</td>
+                                                        <td>Amazon</td>
+                                                        <td>2</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Bearing</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Assorted VEX Gears</td>
+                                                        <td>N/A</td>
+                                                        <td>4</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>O-ring</td>
+                                                        <td>McMaster</td>
                                                         <td>29.99</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Misc Hardware (i.e. standoffs, bolts, washers, nuts, wire etc.)</td>
+                                                        <td>Olin Stock/McMaster</td>
+                                                        <td>-</td>
+                                                        <td>15.00</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Low Profile Motors</td>
+                                                        <td>N/A</td>
+                                                        <td>3</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>VEX 393 Motor</td>
+                                                        <td>N/A</td>
+                                                        <td>29.99</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>VIGOR VS-2MB Servo</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>2</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Xbox 360 Kinect</td>
+                                                        <td>N/A</td>
+                                                        <td>1</td>
+                                                        <td>125.00</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>LIDAR-Lite v3</td>
+                                                        <td>SparkFUN</td>
+                                                        <td>1</td>
+                                                        <td>149.99</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Photo Interruptor</td>
+                                                        <td>SparkFUN</td>
+                                                        <td>1</td>
+                                                        <td>1.95</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>6 Wire Slip Ring</td>
+                                                        <td>Digikey</td>
+                                                        <td>1</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Raspberry Pi</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td>29.99</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Arduino Uno R3</td>
+                                                        <td>Amazon</td>
+                                                        <td>2</td>
+                                                        <td>27.99</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Arduino Uno Motor Shield</td>
+                                                        <td>Olin Stock</td>
+                                                        <td>2</td>
+                                                        <td></td>
+                                                    </tr><tr>
+                                                        <td>5V Power Supply for Raspberry Pi</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td>9.99</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>32GB MicroSD Card</td>
+                                                        <td>Amazon</td>
+                                                        <td>1</td>
+                                                        <td>19.99</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Potentiometer</td>
+                                                        <td>Digikey</td>
+                                                        <td>3</td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Limit Switch</td>
+                                                        <td>Digikey</td>
+                                                        <td>2</td>
+                                                        <td>5.00</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td></td>
+                                                        <td>Total Price</td>
+                                                        <td></td>
+                                                        <td>1000000</td>
                                                     </tr>
                                             </table>
                                         </div>
