more website changes

--- a/Website/mechanical.html
+++ b/Website/mechanical.html
@@ -50,7 +50,24 @@
                     <div class="row">
 						<div class="12u">
                             <div class="box">
-                                <h3>Look it works</h3>
+                                <h3>Design</h3>
+                                <p>A detailed description of your mechanical design (CAD images/renderings are appropriate) and any necessary analysis.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+						<div class="12u">
+                            <div class="box">
+                                <h3>CAD</h3>
+                                <p>A detailed description of your mechanical design (CAD images/renderings are appropriate) and any necessary analysis.</p>
+                                <span class="image fit"><img src="images/final_cad.png" alt="" /></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+						<div class="12u">
+                            <div class="box">
+                                <h3>Fabrication</h3>
                                 <p>A detailed description of your mechanical design (CAD images/renderings are appropriate) and any necessary analysis.</p>
                             </div>
                         </div>
