--- a/Website/sensors.html
+++ b/Website/sensors.html
@@ -55,7 +55,7 @@
                                     <iframe height="500" class="image fit" src="https://www.youtube.com/embed/cUEJAdhIl0o?rel=0&autoplay=0" frameborder="0" allowfullscreen onload="resizeIframe(this)"></iframe>
                                 </div>-->
                                 <div class="row">
-                                    <video class="image fit" controls autoplay>
+                                    <video class="image fit" controls>
                                         <source src="videos/lidar_2.mp4" type="video/mp4">
                                     </video>
                                 </div>
@@ -86,6 +86,16 @@
 											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_3.jpg" alt="" /></span></div>
 										</div>
 									</div>
+								</section>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="12u">
+                            <div class="box">
+                                <section class="box">
+									<h3>Kinect</h3>
+									<span class="image fit"><img src="images/Software/kinect.jpg" alt="" /></span>
 								</section>
                             </div>
                         </div>
