--- a/Website/electrical.html
+++ b/Website/electrical.html
@@ -50,7 +50,7 @@
                     <div class="row">
 						<div class="12u">
                             <div class="box">
-                                <h3>Look it works</h3>
+                                <h3>Circuit Diagrams</h3>
                                 <p>A detailed description of electrical design (circuit diagrams are appropriate) and any necessary analysis.</p>
                             </div>
                         </div>
