--- a/Website/firmware.html
+++ b/Website/firmware.html
@@ -50,7 +50,15 @@
                     <div class="row">
 						<div class="12u">
                             <div class="box">
-                                <h3>Look it works</h3>
+                                <h3>Arduino 1</h3>
+                                <p>A detailed description of the firmware design with links to complete source code (github or other repository is helpful).</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+						<div class="12u">
+                            <div class="box">
+                                <h3>Arduino 2</h3>
                                 <p>A detailed description of the firmware design with links to complete source code (github or other repository is helpful).</p>
                             </div>
                         </div>
