--- a/Website/team.html
+++ b/Website/team.html
@@ -55,7 +55,7 @@
                                 Cedric Kim
                             </h2>
                             <h4>
-                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                                Cedric Kim claims to be a mechanical engineer, but he just can't help display his love for circuits and software. To prove it, Cedric casually built the Lidar for this project with little to no sweat. If you ever ask yourself the question: Is there anything that Cedric Kim can't engineer? The answer will always be no...
                             </h4>
                         </section>
                         <section class="box alt">
@@ -66,7 +66,7 @@
                                 Jeremy Garcia
                             </h2>
                             <h4>
-                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                                Software guru Jeremy brought his design experience to the table by making this beautiful website. Along with helping Cedric create the user interface in Python and integrating sensors, Jeremy also helped out on the computer vision module. Fun fact: bringing ice cream to meetings increases Jeremy’s productivity by over 9000.
                             </h4>
                         </section>
                         <section class="box alt">
@@ -77,7 +77,7 @@
                                 Daniel Daugherty
                             </h2>
                             <h4>
-                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                                Daniel is a mechanical engineer who specialized in rapid prototyping and mechanical design. He worked immensely with the 3D printer and the laser cutter to make sure parts were well-tested and checked before finally machined and integrated. He also helped a lot with mechanical fabrication and kept a constant positive atmosphere around the team. Daniel won’t let you see it, but he really likes dancing on camera when we were filming.
                             </h4>
                         </section>
                         <section class="box alt">
@@ -88,7 +88,7 @@
                                 Kevin Zhang
                             </h2>
                             <h4>
-                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                                Kevin Zhang is a computational roboticist who specializes in sensor fusion and decision making algorithms. He worked extensively on computer vision and body detection algorithms, as well as integrating data streams and parallelizing processes. His work with sensors also allowed him to help greatly on firmware and sensor interfacing. Kevin has a funny obsession with chickens, which manifested itself several times in the codebase as test variables. Luckily, he is also diligent with code documentation and rooted them out for the final product.
                             </h4>
                         </section>
                         <section class="box alt">
@@ -99,7 +99,7 @@
                                 Kevin Guo
                             </h2>
                             <h4>
-                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                                Don't let the picture to the left fool you. Behind the serious exterior there exists a comical mechanical engineer. Kevin's CAD prowess is known throughout the school and it certainly came in handy this project. Additionally, few people know that Kevin's middle name is fabrication and his second home is the Olin Machine Shop. 
                             </h4>
                         </section>
                     </div>
